--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -949,6 +949,13 @@ a.button.generate-btn::before {
   align-items: center;
   justify-content: center;
 }
+
+.text-circle-main .bg-down-arrow {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .text-circle {
   animation: rotation infinite 30s linear;
 }
@@ -1102,6 +1109,19 @@ a.button.generate-btn::before {
   top: 40px;
   z-index: -1;
 }
+
+.client-img1,
+.client-img2,
+.client-img3,
+.client-img4,
+.client-img5,
+.client-img6 {
+  width: 80px;
+  height: 80px;
+  object-fit: cover;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+}
+
 .client-img1 {
   position: absolute;
   top: 50px;
@@ -1526,11 +1546,19 @@ a.button.generate-btn::before {
   justify-content: flex-end;
   position: relative;
 }
+
 .fantasy1 {
   max-width: 100%;
   border-radius: 30px;
+  width: 400px;
+  height: 500px;
+  object-fit: cover;
 }
 .fantasy2 {
+  max-width: 450px;
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
   position: absolute;
   bottom: 40px;
   left: -50px;
@@ -1542,7 +1570,9 @@ a.button.generate-btn::before {
   padding: 100px 0;
 }
 .blog-img {
-  max-width: 100%;
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
   border-radius: 30px;
 }
 .blog-box-col:hover .blog-img {
